# pear-admin-flask

./: .cz.toml  .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  configs.py  pyproject.toml
apps/: __init__.py
pear_admin/: __init__.py
pear_admin/apis/: __init__.py  department.py  passport.py  rights.py  role.py  user.py
pear_admin/extensions/: __init__.py  init_jwt.py  init_script.py
pear_admin/orms/: __init__.py  _base.py  department.py  rights.py  role.py  user.py
pear_admin/views/: __init__.py  index.py  system.py  views.py
static/admin/css/: admin.css  admin.dark.css  reset.css  variables.css
static/admin/data/: menu.json  message.json  table.json
static/component/layui/: layui.js
static/component/pear/: pear.js
static/config/: pear.config.json
static/data/: databases.sql  ums_department.csv  ums_rights.csv  ums_role.csv  ums_user.csv
static/js/: pear_admin_flask.js
templates/: index.html  login.html  register.html
templates/error/: 403.html  404.html  500.html
templates/includes/: script.html
templates/system/department/: index.html
templates/system/rights/: index.html
templates/system/role/: index.html
templates/system/user/: index.html
templates/view/: index.html  login.html  register.html
templates/view/analysis/: index.html
templates/view/console/: index.html
templates/view/system/: person.html
templates/views/department/: index.html
templates/views/rights/: index.html
templates/views/role/: index.html  role_rights.html
templates/views/user/: index.html  user_role.html
(+35 files in other folders)
